--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             </h1>
             <a
               href="https://www.wallpaper.com/design-interiors/air-play-moon-safari-white-box-stage"
-              ><img src="/img/wallpapercover.webp" style="width: 100%"
+              ><img src="/img/wallpaper-air.jpg" style="width: 100%"
             /></a>
             <p style="margin-bottom: 2px">
               'Air Play Moon Safari' is the French band's latest tour, as they
