--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="img/favicon_io/apple-touch-icon.png"
+      href="./img/favicon_io/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="img/favicon_io/favicon-32x32.png"
+      href="./img/favicon_io/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="img/favicon_io/favicon-16x16.png"
+      href="./img/favicon_io/favicon-16x16.png"
     />
-    <link rel="manifest" href="img/favicon_io/site.webmanifest" />
+    <link rel="manifest" href="./img/favicon_io/site.webmanifest" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -60,7 +60,7 @@
           href="#"
           class="w3-bar-item button-square button-hover"
           style="padding: 17px 22px; margin-left: 10px"
-          ><img src="img/AIRlogo.png" style="width: 60px"
+          ><img src="./img/AIRlogo.png" style="width: 60px"
         /></a>
         <a
           href="#about"
@@ -167,7 +167,7 @@
     >
       <!-- Homepage -->
       <img
-        src="img/moonsafari-ezgif.gif"
+        src="./img/moonsafari-ezgif.gif"
         style="
           width: 100%;
           display: block;
@@ -221,11 +221,11 @@
         <button class="accordion about-title">Jean-Benoît DUNCKEL</button>
         <div class="panel">
           <p class="w3-left-align">
-            Dunckel was born on 9.7.1969 in Versailles. In the 198Os, he formed
-            the band Orange with Alex Gopher, Xavier Jamaux and Jean de
-            Reydellet. He studied mathematics and physics and taught at a middle
-            school in Paris, before embarking on a career as a professional
-            musician
+            Dunckel was born on September 7, 1969 in Versailles. In the 198Os,
+            he formed the band Orange with Alex Gopher, Xavier Jamaux and Jean
+            de Reydellet. He studied mathematics and physics and taught at a
+            middle school in Paris, before embarking on a career as a
+            professional musician
           </p>
           <p class="w3-left-align">
             Working under the name Darkel, he released his first solo album,
@@ -246,21 +246,22 @@
         <button class="accordion about-title">Nicolas GODIN</button>
         <div class="panel">
           <p class="w3-left-align">
-            Godin was born on 12.25.1969 in Paris, and studied architecture at
-            the École Nationale Supérieure d'Architecture, along with soon to be
-            musical partner, Jean-Benoît Dunckel. Before founding Air, Godin
-            played in the band Orange, with others such as Dunckel, Alex Gopher,
-            Xavier Jamaux, and Jean de Reydellet. He and JB have been working
-            together since they were teenagers in the 198Os.
+            Godin was born on December 25, 1969 in Paris, and studied
+            architecture at the École Nationale Supérieure d'Architecture, along
+            with soon to be musical partner, Jean-Benoît Dunckel. Before
+            founding Air, Godin played in the band Orange, with others such as
+            Dunckel, Alex Gopher, Xavier Jamaux, and Jean de Reydellet. He and
+            JB have been working together since they were teenagers in the
+            198Os.
           </p>
           <p class="w3-left-align">
-            On 9.18.2O15, Godin released his first solo album
+            On September 18, 2O15, Godin released his first solo album
             <i>Contrepoint</i> (Because Music), inspired by the music of Johann
             Sebastian Bach. Godin composed the soundtrack for French series A
             Very Secret Service (2O15-2O18). Godin released his second studio
             album
             <i>Concrete and Glass</i>
-            on 1.24.2O2O via Because Music.
+            on January 24, 2O2O via Because Music.
           </p>
           <!--Default first accordion open: https://stackoverflow.com/questions/43925663/w3-accordions-open-by-default-page-load -->
           <script src="js/accordion.js"></script>
@@ -283,7 +284,7 @@
           >
             <h1>
               <img
-                src="img/logo_wallpaper.png"
+                src="./img/logo_wallpaper.png"
                 alt="timeout"
                 width="60px"
                 style="float: left; padding-right: 20px"
@@ -322,7 +323,7 @@
                 href="https://www.timeout.com/cascais/news/air-moon-safari-changed-our-lives-but-it-was-the-death-of-our-innocence-061724"
               >
                 <img
-                  src="img/logo_timeout.png"
+                  src="./img/logo_timeout.png"
                   alt="timeout"
                   width="80px"
                   style="float: left; padding: 10px; margin-left: -8px"
@@ -359,7 +360,7 @@
                 href="https://www.standard.co.uk/culture/music/air-live-at-royal-albert-hall-moon-safari-25-years-live-b1161247.html"
               >
                 <img
-                  src="img/logo_eveningstandard.png"
+                  src="./img/logo_eveningstandard.png"
                   alt="london evening standard"
                   width="80"
                   style="float: left; padding: 15px"
@@ -396,7 +397,7 @@
                 href="https://www.smh.com.au/culture/music/this-album-helped-define-the-90s-now-the-band-will-play-it-in-full-for-the-first-time-20240513-p5jd2f.html"
               >
                 <img
-                  src="img/logo_sydneymorningherald.png"
+                  src="./img/logo_sydneymorningherald.png"
                   alt="sydney morning herald"
                   width="80"
                   style="float: left; padding: 20px"
@@ -437,7 +438,7 @@
               <li class="w3-padding-16">
                 <a href="#tour">
                   <img
-                    src="img/0802-date-icon.png"
+                    src="./img/0802-date-icon.png"
                     alt="Image"
                     class="w3-left w3-margin-right"
                     style="width: 38px"
@@ -449,7 +450,7 @@
               <li class="w3-padding-16">
                 <a href="#tour">
                   <img
-                    src="img/0804-date-icon.png"
+                    src="./img/0804-date-icon.png"
                     alt="Image"
                     class="w3-left w3-margin-right"
                     style="width: 38px"
@@ -461,7 +462,7 @@
               <li class="w3-padding-16">
                 <a href="#tour">
                   <img
-                    src="img/0808-date-icon.png"
+                    src="./img/0808-date-icon.png"
                     alt="Image"
                     class="w3-left w3-margin-right"
                     style="width: 38px"
@@ -473,7 +474,7 @@
               <li class="w3-padding-16">
                 <a href="#tour">
                   <img
-                    src="img/0810-date-icon.png"
+                    src="./img/0810-date-icon.png"
                     alt="Image"
                     class="w3-left w3-margin-right w3-sepia"
                     style="width: 38px"
@@ -486,7 +487,7 @@
               <li class="w3-padding-16">
                 <a href="#tour">
                   <img
-                    src="img/0817-date-icon.png"
+                    src="./img/0817-date-icon.png"
                     alt="Image"
                     class="w3-left w3-margin-right w3-sepia"
                     style="width: 38px"
@@ -499,7 +500,7 @@
               <li class="w3-padding-16">
                 <a href="#tour">
                   <img
-                    src="img/0818-date-icon.png"
+                    src="./img/0818-date-icon.png"
                     alt="Image"
                     class="w3-left w3-margin-right w3-sepia"
                     style="width: 38px"
@@ -518,13 +519,13 @@
         <div class="row-music" style="margin-bottom: 140px; margin-top: 100px">
           <div class="column-music">
             <img
-              src="img/album01-moon-safari.png"
+              src="./img/album01-moon-safari.png"
               style="max-width: 100%; cursor: pointer"
               onclick="document.getElementById('IMG01').style.display='block'"
               class="modal-hover-opacity"
             />
             <img
-              src="img/album05-pocketsymphony.png"
+              src="./img/album05-pocketsymphony.png"
               style="max-width: 100%; cursor: pointer"
               onclick="document.getElementById('IMG05').style.display='block'"
               class="modal-hover-opacity"
@@ -534,13 +535,13 @@
           <div class="column-music">
             <img
               ud
-              src="img/album02-virginsuicides.png"
+              src="./img/album02-virginsuicides.png"
               style="max-width: 100%; cursor: pointer"
               onclick="document.getElementById('IMG02').style.display='block'"
               class="modal-hover-opacity"
             />
             <img
-              src="img/album06-love2.png"
+              src="./img/album06-love2.png"
               style="max-width: 100%; cursor: pointer"
               onclick="document.getElementById('IMG06').style.display='block'"
               class="modal-hover-opacity"
@@ -548,13 +549,13 @@
           </div>
           <div class="column-music">
             <img
-              src="img/album03-10Khzlegend.png"
+              src="./img/album03-10Khzlegend.png"
               style="max-width: 100%; cursor: pointer"
               onclick="document.getElementById('IMG03').style.display='block'"
               class="modal-hover-opacity"
             />
             <img
-              src="img/album07-levoyagedanslalune.png"
+              src="./img/album07-levoyagedanslalune.png"
               style="max-width: 100%; cursor: pointer"
               onclick="document.getElementById('IMG07').style.display='block'"
               class="modal-hover-opacity"
@@ -562,13 +563,13 @@
           </div>
           <div class="column-music">
             <img
-              src="img/album04-talkiewalkie.png"
+              src="./img/album04-talkiewalkie.png"
               style="max-width: 100%; cursor: pointer"
               onclick="document.getElementById('IMG04').style.display='block'"
               class="modal-hover-opacity"
             />
             <img
-              src="img/album08_musicformuseum.jpeg"
+              src="./img/album08_musicformuseum.jpeg"
               style="max-width: 200%; cursor: pointer"
               onclick="document.getElementById('IMG08').style.display='block'"
               class="modal-hover-opacity"
@@ -588,7 +589,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album01-moon-safari.png" />
+            <img src="./img/album01-moon-safari.png" />
             <h1 style="margin-top: 30px">MOON SAFARI</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -636,7 +637,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album02-virginsuicides.png" />
+            <img src="./img/album02-virginsuicides.png" />
             <h1 style="margin-top: 20px">VIRGIN SUICIDES</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -681,7 +682,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album03-10Khzlegend.png" />
+            <img src="./img/album03-10Khzlegend.png" />
             <h1 style="margin-top: 30px">1O OOO HZ LEGEND</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -726,7 +727,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album04-talkiewalkie.png" />
+            <img src="./img/album04-talkiewalkie.png" />
             <h1 style="margin-top: 30px">TALKIE WALKIE</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -768,7 +769,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album05-pocketsymphony.png" />
+            <img src="./img/album05-pocketsymphony.png" />
             <h1 style="margin-top: 30px">POCKET SYMPHONY</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -814,7 +815,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album06-love2.png" />
+            <img src="./img/album06-love2.png" />
             <h1 style="margin-top: 30px">LOVE 2</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -855,7 +856,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album07-levoyagedanslalune.png" />
+            <img src="./img/album07-levoyagedanslalune.png" />
             <h1 style="margin-top: 30px">LE VOYAGE DANS LA LUNE</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -908,7 +909,7 @@
                 >×</span
               >
             </header>
-            <img src="img/album08_musicformuseum.jpeg" />
+            <img src="./img/album08_musicformuseum.jpeg" />
             <h1 style="margin-top: 30px">MUSIC FOR MUSEUM</h1>
             <div class="scroll music-text w3-left-align">
               <p>
@@ -1409,17 +1410,17 @@
             <div class="w3-display-container">
               <img
                 class="mySlides1"
-                src="img/SHOP-whitebandoutlinetee1.jpeg"
+                src="./img/SHOP-whitebandoutlinetee1.jpeg"
                 style="width: 100%"
               />
               <img
                 class="mySlides1"
-                src="img/SHOP-whitebandoutlinetee2.jpg"
+                src="./img/SHOP-whitebandoutlinetee2.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides1"
-                src="img/SHOP-whitebandoutlinetee3.jpg"
+                src="./img/SHOP-whitebandoutlinetee3.jpg"
                 style="width: 100%"
               />
               <p>WHITE BAND OUTLINE TEE <$35></p>
@@ -1444,12 +1445,12 @@
             <div class="w3-display-container">
               <img
                 class="mySlides4"
-                src="img/SHOP-airnorthamericatourraglan1.jpg"
+                src="./img/SHOP-airnorthamericatourraglan1.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides4"
-                src="img/SHOP-airnorthamericatourraglan2.jpg"
+                src="./img/SHOP-airnorthamericatourraglan2.jpg"
                 style="width: 100%"
               />
               <p>2O24 TOUR RAGLAN <$4O></p>
@@ -1477,17 +1478,17 @@
             <div class="w3-display-container">
               <img
                 class="mySlides2"
-                src="img/SHOP-moonsafaritee1.jpeg"
+                src="./img/SHOP-moonsafaritee1.jpeg"
                 style="width: 100%"
               />
               <img
                 class="mySlides2"
-                src="img/SHOP-moonsafaritee2.jpg"
+                src="./img/SHOP-moonsafaritee2.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides2"
-                src="img/SHOP-moonsafaritee3.jpg"
+                src="./img/SHOP-moonsafaritee3.jpg"
                 style="width: 100%"
               />
               <p>MOON SAFARI TEE <$4O></p>
@@ -1512,17 +1513,17 @@
             <div class="w3-display-container">
               <img
                 class="mySlides5"
-                src="img/SHOP-moonsafarilongsleeve1.jpeg"
+                src="./img/SHOP-moonsafarilongsleeve1.jpeg"
                 style="width: 100%"
               />
               <img
                 class="mySlides5"
-                src="img/SHOP-moonsafarilongsleeve2.jpg"
+                src="./img/SHOP-moonsafarilongsleeve2.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides5"
-                src="img/SHOP-moonsafarilongsleeve3.jpg"
+                src="./img/SHOP-moonsafarilongsleeve3.jpg"
                 style="width: 100%"
               />
               <p>MOON SAFARI LONGSLEEVE <$4O></p>
@@ -1549,17 +1550,17 @@
             <div class="w3-display-container">
               <img
                 class="mySlides3"
-                src="img/SHOP-sexyboymonkeytee1.jpeg"
+                src="./img/SHOP-sexyboymonkeytee1.jpeg"
                 style="width: 100%"
               />
               <img
                 class="mySlides3"
-                src="img/SHOP-sexyboymonkeytee2.jpg"
+                src="./img/SHOP-sexyboymonkeytee2.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides3"
-                src="img/SHOP-sexyboymonkeytee3.jpg"
+                src="./img/SHOP-sexyboymonkeytee3.jpg"
                 style="width: 100%"
               />
               <p>SEXY BOY MONKEY TEE <$35></p>
@@ -1584,22 +1585,22 @@
             <div class="w3-display-container">
               <img
                 class="mySlides6"
-                src="img/SHOP-kellyseyeslongsleeve1.jpg"
+                src="./img/SHOP-kellyseyeslongsleeve1.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides6"
-                src="img/SHOP-kellyseyeslongsleeve2.jpg"
+                src="./img/SHOP-kellyseyeslongsleeve2.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides6"
-                src="img/SHOP-kellyseyeslongsleeve3.jpg"
+                src="./img/SHOP-kellyseyeslongsleeve3.jpg"
                 style="width: 100%"
               />
               <img
                 class="mySlides6"
-                src="img/SHOP-kellyseyeslongsleeve4.jpg"
+                src="./img/SHOP-kellyseyeslongsleeve4.jpg"
                 style="width: 100%"
               />
               <p>KELLY'S EYES LONGSLEEVE <$4O></p>
