--- a/index.html
+++ b/index.html
@@ -1695,11 +1695,46 @@
         }
       }
 
+      // Get the modal
+      var modal = document.getElementById("IMG01");
+      var modalA = document.getElementById("IMG02");
+      var modalB = document.getElementById("IMG03");
+      var modalC = document.getElementById("IMG04");
+      var modalD = document.getElementById("IMG05");
+      var modalE = document.getElementById("IMG06");
+      var modalF = document.getElementById("IMG07");
+      var modalG = document.getElementById("IMG08");
+      var modalH = document.getElementById("ticketModal");
+
       // When the user clicks anywhere outside of the modal, close it
-      var modal = document.getElementById("ticketModal");
       window.onclick = function (event) {
+        //alert(event.target)
         if (event.target == modal) {
           modal.style.display = "none";
+        }
+        if (event.target == modalA) {
+          modalA.style.display = "none";
+        }
+        if (event.target == modalB) {
+          modalB.style.display = "none";
+        }
+        if (event.target == modalC) {
+          modalC.style.display = "none";
+        }
+        if (event.target == modalD) {
+          modalD.style.display = "none";
+        }
+        if (event.target == modalE) {
+          modalE.style.display = "none";
+        }
+        if (event.target == modalF) {
+          modalF.style.display = "none";
+        }
+        if (event.target == modalG) {
+          modalG.style.display = "none";
+        }
+        if (event.target == modalH) {
+          modalH.style.display = "none";
         }
       };
     </script>
