--- a/index.html
+++ b/index.html
@@ -593,15 +593,15 @@
             <h1 style="margin-top: 30px">MOON SAFARI</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                Moon Safari is the debut studio album by French electronic music
-                duo Air, released on January 16, 1998 by Source and Virgin
-                Records. Moon Safari was re-released on April 14, 2OO8 to mark
-                the album's 1Oth anniversary, including a bound book, a DVD
-                documentary about the duo, and a bonus CD with live performances
-                and remixes, and on 3.15.2O24, to mark the album's 25th
-                anniversary. Moon Safari was acclaimed by critics. It is
-                credited with setting the stage for the budding downtempo music
-                style. By February 2O12, it had sold 386,OOO copies in the
+                <i>Moon Safari</i> is the debut studio album by French
+                electronic music duo Air, released on January 16, 1998 by Source
+                and Virgin Records. <i>Moon Safari</i> was re-released on April
+                14, 2OO8 to mark the album's 1Oth anniversary, including a bound
+                book, a DVD documentary about the duo, and a bonus CD with live
+                performances and remixes, and on 3.15.2O24, to mark the album's
+                25th anniversary. <i>Moon Safari</i> was acclaimed by critics.
+                It is credited with setting the stage for the budding downtempo
+                music style. By February 2O12, it had sold 386,OOO copies in the
                 United States.
               </p>
               <dl>
@@ -638,19 +638,19 @@
               >
             </header>
             <img src="./img/album02-virginsuicides.png" />
-            <h1 style="margin-top: 20px">VIRGIN SUICIDES</h1>
+            <h1 style="margin-top: 20px">THE VIRGIN SUICIDES</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                The Virgin Suicides is a score composed by French electronic
-                music duo Air for the 1999 film of the same name by Sofia
-                Coppola. It was released on February 23, 2OOO by Virgin Records.
-                The album was nominated for Best Soundtrack at the 2OO1 Brit
-                Awards. The French edition of Rolling Stone magazine placed The
-                Virgin Suicides at number 49 on their list of the 1OO essential
-                French rock albums. In 2O14, NME placed the album at number 11
-                on their "61 of the Greatest Film Soundtracks Ever" list. In
-                2O19, Pitchfork placed the album at number four on their "Top 5O
-                Best Movie Scores of All Time" list
+                <i>The Virgin Suicides</i> is a score composed by French
+                electronic music duo Air for the 1999 film of the same name by
+                Sofia Coppola. It was released on February 23, 2OOO by Virgin
+                Records. The album was nominated for Best Soundtrack at the 2OO1
+                Brit Awards. The French edition of Rolling Stone magazine placed
+                <i>The Virgin Suicides</i> at number 49 on their list of the 1OO
+                essential French rock albums. In 2O14, NME placed the album at
+                number 11 on their "61 of the Greatest Film Soundtracks Ever"
+                list. In 2O19, Pitchfork placed the album at number four on
+                their "Top 5O Best Movie Scores of All Time" list
               </p>
               <dl>
                 <dt>[O1] PLAYGROUND LOVE | 3:32</dt>
@@ -683,16 +683,17 @@
               >
             </header>
             <img src="./img/album03-10Khzlegend.png" />
-            <h1 style="margin-top: 30px">1O OOO HZ LEGEND</h1>
+            <h1 style="margin-top: 30px">1O,OOO HZ LEGEND</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                1O OOO Hz Legend is the second studio album by French electronic
-                music duo Air, released in France on May 28, 2OO1 by Virgin
-                Records and in the United States on May 29, 2OO1 by Astralwerks.
-                On this album, tracks are longer and more electronic-oriented
-                than on their previous records. These experimentations find the
-                duo expanding their capacities and working with other artists
-                including Beck and suGar Yoshinaga of Buffalo Daughter.
+                <i>1O,OOO Hz Legend</i> is the second studio album by French
+                electronic music duo Air, released in France on May 28, 2OO1 by
+                Virgin Records and in the United States on May 29, 2OO1 by
+                Astralwerks. On this album, tracks are longer and more
+                electronic-oriented than on their previous records. These
+                experimentations find the duo expanding their capacities and
+                working with other artists including Beck and suGar Yoshinaga of
+                Buffalo Daughter.
               </p>
               <dl>
                 <dt>[O1] ELECTRONIC PERFORMERS | 5:36</dt>
@@ -731,16 +732,16 @@
             <h1 style="margin-top: 30px">TALKIE WALKIE</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                Talkie Walkie is the third studio album by French electronic
-                music duo Air, released on January 26, 2OO4 by Virgin Records.
-                "Alone in Kyoto" was included on the soundtrack to the 2003 film
-                Lost in Translation, and "Run" was used in both the Veronica
-                Mars episode "Nobody Puts Baby in a Corner" and the 2OO4 French
-                film Lila Says. "Talkie-walkie" means walkie-talkie in French.
-                As of November 2OO6, Talkie Walkie had sold 161,OOO copies in
-                the United States, according to Nielsen SoundScan. The album
-                shipped 4O5,OOO copies outside France within two weeks of its
-                release, according to Virgin Records.
+                <i>Talkie Walkie</i> is the third studio album by French
+                electronic music duo Air, released on January 26, 2OO4 by Virgin
+                Records. "Alone in Kyoto" was included on the soundtrack to the
+                2003 film Lost in Translation, and "Run" was used in both the
+                Veronica Mars episode "Nobody Puts Baby in a Corner" and the
+                2OO4 French film Lila Says. "Talkie-walkie" means walkie-talkie
+                in French. As of November 2OO6, Talkie Walkie had sold 161,OOO
+                copies in the United States, according to Nielsen SoundScan. The
+                album shipped 4O5,OOO copies outside France within two weeks of
+                its release, according to Virgin Records.
               </p>
               <dl>
                 <dt>[O1] VENUS | 4:O4</dt>
@@ -773,16 +774,16 @@
             <h1 style="margin-top: 30px">POCKET SYMPHONY</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                Pocket Symphony is the fourth studio album by French electronic
-                music duo Air, released on March 5, 2OO7 by Virgin Records. It
-                features collaborations with Jarvis Cocker and Neil Hannon.
-                Pocket Symphony incorporates some of the Japanese instruments
-                Godin had recently learned to play from an Okinawan master
-                musician: the koto (also referred to as a Japanese floor harp)
-                and the three-string, banjo-like shamisen. However, a press
-                release claims that "conventional instruments continue to play a
-                great role" in the duo's music. The album features art by Xavier
-                Veilhan. Pocket Symphony debuted at number 4O on the US
+                <i>Pocket Symphony</i> is the fourth studio album by French
+                electronic music duo Air, released on March 5, 2OO7 by Virgin
+                Records. It features collaborations with Jarvis Cocker and Neil
+                Hannon. <i>Pocket Symphony</i> incorporates some of the Japanese
+                instruments Godin had recently learned to play from an Okinawan
+                master musician: the koto (also referred to as a Japanese floor
+                harp) and the three-string, banjo-like shamisen. However, a
+                press release claims that "conventional instruments continue to
+                play a great role" in the duo's music. The album features art by
+                Xavier Veilhan. Pocket Symphony debuted at number 4O on the US
                 Billboard 2OO, with 17,OOO copies sold in its first week. As of
                 February 2O12, it had sold 77,OOO copies in the United States.
               </p>
@@ -819,13 +820,13 @@
             <h1 style="margin-top: 30px">LOVE 2</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                Love 2 is the fifth studio album by French electronic music duo
-                Air, released on September 3O, 2OO9 in Japan and in the first
-                week of October in the rest of the world by Virgin Records. It
-                is the duo's first production recorded at their own recording
-                facility, Studio Atlas, in northern Paris. As of February 2O12,
-                Love 2 had sold 24,OOO copies in the United States, according to
-                Nielsen SoundScan.
+                <i>Love 2</i> is the fifth studio album by French electronic
+                music duo Air, released on September 3O, 2OO9 in Japan and in
+                the first week of October in the rest of the world by Virgin
+                Records. It is the duo's first production recorded at their own
+                recording facility, Studio Atlas, in northern Paris. As of
+                February 2O12, <i>Love 2</i> had sold 24,OOO copies in the
+                United States, according to Nielsen SoundScan.
               </p>
               <dl>
                 <dt>[O1] DO THE JOY | 3:O5</dt>
@@ -860,12 +861,12 @@
             <h1 style="margin-top: 30px">LE VOYAGE DANS LA LUNE</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                Le voyage dans la lune (English: A Trip to the Moon) is the
-                sixth studio album by French electronic music duo Air, released
-                on February 6, 2O12 by Virgin Records. The album is inspired by
-                the 19O2 silent science fiction film A Trip to the Moon (Le
-                voyage dans la lune) by Georges Méliès and is intended to be a
-                soundtrack to the restored version of the film. A free
+                <i>Le voyage dans la lune</i> (English: A Trip to the Moon) is
+                the sixth studio album by French electronic music duo Air,
+                released on February 6, 2O12 by Virgin Records. The album is
+                inspired by the 19O2 silent science fiction film A Trip to the
+                Moon (Le voyage dans la lune) by Georges Méliès and is intended
+                to be a soundtrack to the restored version of the film. A free
                 three-minute film excerpt featuring the song "Sonic Armada" was
                 made available for one week in early December 2011 in
                 conjunction with a pre-order offer. A limited edition of the
@@ -913,12 +914,12 @@
             <h1 style="margin-top: 30px">MUSIC FOR MUSEUM</h1>
             <div class="scroll music-text w3-left-align">
               <p>
-                Music for Museum is an album by French electronic music duo Air,
-                recorded as a commission for the Palais des Beaux-Arts de Lille
-                as part of their Open Museum project. It was released on June
-                26, 2O14 as a limited vinyl-only release, only 1,OOO copies of
-                the album were printed. The album was printed on dual clear
-                vinyl.
+                <i>Music for Museum</i> is an album by French electronic music
+                duo Air, recorded as a commission for the Palais des Beaux-Arts
+                de Lille as part of their Open Museum project. It was released
+                on June 26, 2O14 as a limited vinyl-only release, only 1,OOO
+                copies of the album were printed. The album was printed on dual
+                clear vinyl.
               </p>
               <dl>
                 <dt>[O1] LAND ME | 8:13</dt>
